--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,24 @@
 spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: goalmatestest@gmail.com
+    password: "lbupmybtdxitjyki"
+#    lbupmybtdxitjyki
+#    !Qweqqqq1
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          socketFactory:
+            port: "smtp.mail.gmail.com"
+            class: "javax.net.ssl.SSLSocketFactory"
+            fallback: true
+          ssl:
+            protocols: TLSv1.2
   datasource:
     url: jdbc:mysql://localhost:3306/goal_mates
     username: root
